# qaguru_16_poetry

./: pyproject.toml
