[tool.poetry]
name = "qaguru-16-poetry"
version = "0.1.0"
description = ""
authors = ["anna-zukowska <anna-zukowska@ya.ru>"]
readme = "README.md"
packages = [{include = "qaguru_16_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selene = "2.0.0b14"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
